--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div class="card flex flex-column md:flex-row md:justify-content-between row-gap-3">
-  <p-button label="Primary"></p-button>
-  <p-button label="Secondary" severity="secondary"></p-button>
-  <p-button label="Success" severity="success"></p-button>
-  <p-button label="Info" severity="info"></p-button>
-  <p-button label="Warning" severity="warning"></p-button>
-  <p-button label="Help" severity="help"></p-button>
-  <p-button label="Danger" severity="danger"></p-button>  
+<div>
+  <pattern-list></pattern-list>
 </div>
