--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 @import "primeng/resources/themes/lara-light-purple/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex.scss";
+@import "primeicons/primeicons.css";
 
+body {
+    background-color: var(--primary-50);
+}
+
+.yarn-world-patterns-card {
+    background-color: var(--primary-100);
+    border-radius: 6px;
+    padding: 1rem;
+}
