--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,9 @@ body {
     border-radius: 6px;
     padding: 1rem;
 }
+
+.yarn-world-text-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
