--- a/src/app/patterns/pattern-list/pattern-list.component.scss
+++ b/src/app/patterns/pattern-list/pattern-list.component.scss
@@ -8,6 +8,10 @@
     }
 }
 
+.yarn-world-patterns-no-result {
+    font-size: 20rem;
+}
+
 :host ::ng-deep .p-panel .p-panel-footer {
     border: 1px solid var(--primary-500);
     background: var(--primary-500);
