--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
+  <p-toast></p-toast>
   <p-toolbar styleClass="yarn-world-toolbar shadow-2">
     <ng-template pTemplate="start">
       <a href="patterns" class="flex align-items-center text-primary-100 no-underline">
@@ -8,7 +9,8 @@
     </ng-template>
     <ng-template pTemplate="end">
       <div class="flex align-items-center gap-2">
-        <span class="font-bold text-bluegray-50">Amy Elsner</span>
+        <span *ngIf="currentUser" class="font-bold text-bluegray-50">{{currentUser.firstName}} {{
+          currentUser.lastName}}</span>
         <button pButton class="p-button-rounded p-nutton-text p-button-raised p-button-neutral" icon="pi pi-user"
           (click)="menu.toggle($event)"></button>
         <p-menu #menu [model]="menuItems" [popup]="true" appendTo="body"></p-menu>
