--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -10,7 +10,7 @@
             <label for="password">Pasword</label>
             <input type="password" pInputText id="password" name="password" #pass="ngModel" [(ngModel)]="password"
                 required />
-            <small class="p-error" *ngIf="mail.invalid && (mail.dirty || mail.touched)">Pasword is
+            <small class="p-error" *ngIf="pass.invalid && (pass.dirty || pass.touched)">Pasword is
                 required.</small>
         </div>
         <button pButton pRipple label="Login" class="p-button-primary"
