--- a/src/app/patterns/pattern-card/pattern-card.component.html
+++ b/src/app/patterns/pattern-card/pattern-card.component.html
@@ -5,7 +5,8 @@
     <ng-template pTemplate="content">
         <div class="flex justify-content-center align-items-center">
             <img src="{{ pattern.image }}" alt="{{ pattern.title }}"
-                [style]="{ 'max-width': '100%', 'height': '12rem' }" onerror="src='assets/images/no-image.png'">
+                [style]="{ 'max-width': '100%', 'height': '12rem', 'object-fit': 'contain' }"
+                onerror="src='assets/images/no-image.png'">
         </div>
     </ng-template>
     <ng-template pTemplate="footer">
